fullScreen catalog done

--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -1,137 +1,164 @@
 <div class="catalog">
     <div class="sub-catalog">
-        <H1 onclick="scrollPageRight(this)">Внешний вид1</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1 onclick="scrollPageRight(this)">Внешний вид2</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1 onclick="scrollPageRight(this)">Внешний вид3</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
     <div class="sub-catalog">
-        <H1>Внешний вид</H1>
-        <span>item 1</span>
-        <span>item 2</span>
-        <span>item 3</span>
-        <span>item 4</span>
-        <span>item 5</span>
-        <span>more ++++</span>
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
+    </div>
+    <div class="sub-catalog">
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
+    </div>
+    <div class="sub-catalog">
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
+    </div>
+    <div class="sub-catalog">
+        <a href=""><H1 onclick="scrollPageRight(this)">Внешний вид1</H1></a>
+        <a href=""><span>item 1</span></a>
+        <a href=""><span>item 2</span></a>
+        <a href=""><span>item 3</span></a>
+        <a href=""><span>item 4</span></a>
+        <a href=""><span>item 5</span></a>
+        <a href=""><span class="more">+ more...5</span></a>
     </div>
 </div>
