--- a/public/main.css
+++ b/public/main.css
@@ -348,21 +348,19 @@ header {
 }
 .fullscreen-header .catalog {
   position: absolute;
-  left: 0;
   width: 100%;
   max-height: 0;
-  background: red;
+  background: white;
   overflow-y: scroll;
-  transition: max-height 0.3s;
+  transition: 0.3s;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-  z-index: 70;
+  padding: 0;
 }
 .fullscreen-header .catalog.active {
   max-height: calc(100vh - 192px);
+  padding: 30px;
 }
 .fullscreen-header .catalog::-webkit-scrollbar {
   width: 0;
@@ -371,7 +369,27 @@ header {
   display: flex;
   flex-direction: column;
   align-items: start;
-  background: grey;
+}
+.fullscreen-header .catalog .sub-catalog a h1 {
+  font-size: 30px;
+  font-weight: unset;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.fullscreen-header .catalog .sub-catalog a h1:hover {
+  color: #FF6600;
+}
+.fullscreen-header .catalog .sub-catalog a span {
+  font-size: 24px;
+  color: #333;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.fullscreen-header .catalog .sub-catalog a span:hover {
+  color: #FF6600;
+}
+.fullscreen-header .catalog .sub-catalog a .more {
+  color: #FF6600;
 }
 
 .mobile-screen-header {
