--- a/public/main.scss
+++ b/public/main.scss
@@ -402,25 +402,21 @@ header {
         }
     }
 
-
-
     .catalog {
         position: absolute;
-        left: 0;
         width: 100%;
         max-height: 0;
-        background: red;
+        background: white;
         overflow-y: scroll;
-        transition: max-height .3s;
+        transition: .3s;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: $catalog-gap;
-        padding-left: $catalog-gap;
-        padding-right: $catalog-gap;
-        z-index: 70;
+        padding: 0;
 
         &.active {
             max-height: calc(100vh - 192px);
+            padding: $catalog-gap;
         }
 
         &::-webkit-scrollbar {
@@ -431,12 +427,36 @@ header {
             display: flex;
             flex-direction: column;
             align-items: start;
-            background: grey;
 
+            a{
+                h1{
+                    font-size: 30px;
+                    font-weight: unset;
+                    cursor: pointer;
+                    transition: color .2s;
+    
+                    &:hover{
+                        color: $primary-orange;
+                    }
+                }
+    
+                span{
+                    font-size: 24px;
+                    color: #333;
+                    cursor: pointer;
+                    transition: color .2s;
+    
+                    &:hover {
+                        color: $primary-orange;
+                    }
+                }
+    
+                .more{
+                    color: $primary-orange;
+                }
+            }
         }
     }
-
-
 }
 
 .mobile-screen-header {
@@ -759,6 +779,10 @@ header {
 
         }
     }
+}
+
+.main{
+    
 }
 
 //wrap of body
