--- a/views/footer-template.ejs
+++ b/views/footer-template.ejs
@@ -62,7 +62,7 @@
             <div class="btn-callback-footer">
                 <span>Не нашли нужный товар?</span>
             </div>  
-            <a href="geo: 52.350141, 35.348603">
+            <a href="https://yandex.ru/maps/-/CCUVZWwqhC">
                 <div>
                     <svg class="svg-icon-footer">
                         <use xlink:href="/main.svg#map-marker-svg"></use>
