--- a/views/pages/contacts.ejs
+++ b/views/pages/contacts.ejs
@@ -1,1 +1,28 @@
-contacts
+<div class="body-contact">
+    <div class="path-block">
+        <a href="/">Главная&nbsp</a>
+        <span>- Контакты</span><br><br>
+        <h1>Контакты</h1>
+    </div>
+    <div class="contact-block">
+        <div class="contact-info">
+            <h5>Адресс</h5>
+            <Span>
+                Россия, Курская обл. г. Железногорск <br>
+                улица Воинов-Интернационалистов, д.6
+            </Span>
+            <h5>Режим работы</h5>
+            <span>С 9:00 до 20:00 по Московскому времени.</span>
+            <h5>Телефон</h5>
+            <span>+7 (952) 492-07-27</span>
+        </div>
+        <div class="map">
+            <div style="position:relative;overflow:hidden;">
+                <a href="https://yandex.ru/maps/org/killmusiccustom/55738204106/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">KillMusicCustom</a>
+                <a href="https://yandex.ru/maps/10710/zheleznogorsk/category/auto_acoustics/184105288/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Автоакустика в Железногорске</a>
+                <a href="https://yandex.ru/maps/10710/zheleznogorsk/category/auto_parts_and_accessories_store/184105320/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин автозапчастей и автотоваров в Железногорске</a>
+                <iframe src="https://yandex.ru/map-widget/v1/-/CCUVZWWmCA" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
