--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -1,3 +1,21 @@
 <div class="main">
-    
+    <div class="div-slider">
+        <div class="inner-slider">
+            <div class="back" onclick="scrollSliderBtn(this)">
+                <svg>
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                 </svg>
+            </div>
+            <div class="next" onclick="scrollSliderBtn(this)">
+                <svg>
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                 </svg>
+            </div>
+            <div class="scroll-img">
+                <img src="/images/slider/1.png" alt="">
+                <img src="/images/slider/2.png" alt="">
+                <img src="/images/slider/3.png" alt="">
+            </div>    
+        </div>
+    </div>
 </div>
