--- a/public/main.css
+++ b/public/main.css
@@ -95,6 +95,7 @@ a:focus-visible {
 
 header {
   box-shadow: 0px 5px 10px rgba(186, 186, 186, 0.2);
+  z-index: 10;
 }
 
 .fullscreen-header {
@@ -317,13 +318,14 @@ header {
   height: 50px;
   position: relative;
   margin-top: 39px;
-  margin-left: 20px;
+  margin-left: 12px;
 }
 .fullscreen-header .bottom-header .bottom-header-block .liked-product-cart-bottom-header .like-cart-icon {
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
-  margin: 9px;
+  margin: 10px;
+  margin-left: 0;
   transition: 0.2s;
 }
 .fullscreen-header .bottom-header .bottom-header-block .liked-product-cart-bottom-header .like-cart-icon:hover {
@@ -333,7 +335,7 @@ header {
   position: absolute;
   top: auto;
   bottom: 0;
-  right: -10px;
+  right: 0px;
   width: 20px;
   height: 20px;
   width: 18px;
@@ -357,10 +359,12 @@ header {
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
   padding: 0;
+  z-index: 10;
 }
 .fullscreen-header .catalog.active {
-  max-height: calc(100vh - 192px);
+  max-height: calc(100vh - 128px);
   padding: 30px;
+  padding-bottom: 64px;
 }
 .fullscreen-header .catalog::-webkit-scrollbar {
   width: 0;
@@ -652,9 +656,141 @@ header {
   fill: rgba(82, 129, 184, 0.7);
 }
 
+.main .div-slider {
+  width: 100%;
+  height: 400px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.main .div-slider .inner-slider {
+  position: relative;
+  width: 1280px;
+  height: 320px;
+  margin: auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.main .div-slider .inner-slider .back {
+  position: absolute;
+  left: 0px;
+  top: 140px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background: 0;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+.main .div-slider .inner-slider .back svg {
+  width: 24px;
+  height: 24px;
+  margin: 8px;
+  fill: rgba(0, 0, 0, 0);
+  transform: rotate(-90deg);
+}
+.main .div-slider .inner-slider .next {
+  position: absolute;
+  right: 0px;
+  top: 140px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background: 0;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+.main .div-slider .inner-slider .next svg {
+  width: 24px;
+  height: 24px;
+  margin: 8px;
+  fill: rgba(0, 0, 0, 0);
+  transform: rotate(90deg);
+}
+.main .div-slider .inner-slider:hover .back {
+  left: 20px;
+  background: rgba(153, 153, 153, 0.6);
+}
+.main .div-slider .inner-slider:hover .back svg {
+  fill: white;
+  transition: fill 0.2s;
+}
+.main .div-slider .inner-slider:hover .back:hover {
+  background: #FF6600;
+}
+.main .div-slider .inner-slider:hover .next {
+  right: 20px;
+  background: rgba(153, 153, 153, 0.6);
+}
+.main .div-slider .inner-slider:hover .next svg {
+  fill: white;
+}
+.main .div-slider .inner-slider:hover .next:hover {
+  background: #FF6600;
+  fill: white;
+}
+.main .div-slider .inner-slider .scroll-img {
+  display: flex;
+  margin-left: 0;
+  transition: margin-left 0.4s;
+}
+.main .div-slider .inner-slider .scroll-img img {
+  width: 1280px;
+  height: 320px;
+}
+
+.body-contact {
+  width: 100%;
+}
+.body-contact .contact-block {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  border-top: 1px solid whitesmoke;
+}
+.body-contact .contact-block .contact-info {
+  width: 30%;
+  text-align: left;
+}
+.body-contact .contact-block .contact-info h5 {
+  color: grey;
+  font-weight: inherit;
+}
+.body-contact .contact-block .contact-info span {
+  font-size: 14px;
+}
+.body-contact .contact-block .map {
+  width: 60%;
+}
+.body-contact .contact-block .map div {
+  width: 100%;
+}
+.body-contact .contact-block .map div iframe {
+  width: 100%;
+  height: calc(100vh - 128px);
+}
+
 .wrap {
   width: 100%;
   min-height: calc(100vh - 269px);
+}
+.wrap .path-block {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  text-align: left;
+  width: 80%;
+  margin: auto;
+  color: grey;
+}
+.wrap .path-block a {
+  transition: color 0.2s;
+  color: grey;
+}
+.wrap .path-block a:hover {
+  color: #FF6600;
+}
+.wrap .path-block h1 {
+  color: black;
+  font-weight: inherit;
 }
 
 footer {
@@ -938,5 +1074,22 @@ footer .line-footer div a .vk-icon-footer:hover {
   }
   footer .line-footer {
     width: calc(100% - 24px);
+  }
+}
+@media screen and (max-width: 1300px) {
+  .main .div-slider .inner-slider {
+    position: relative;
+    width: 900px;
+  }
+}
+@media screen and (max-width: 920px) {
+  .main .div-slider .inner-slider {
+    position: relative;
+    width: 700px;
+  }
+}
+@media screen and (max-width: 720px) {
+  .main .div-slider {
+    display: none;
   }
 }/*# sourceMappingURL=main.css.map */
