--- a/views/mobile-catalog.ejs
+++ b/views/mobile-catalog.ejs
@@ -1,26 +1,49 @@
-<div class="second-layer page">        
+<div class="second-layer page">
+
     <div class="back-btn-menu" onclick="scrollPageLeft(this)">
         <svg class="arrow-back-svg-icon">
             <use xlink:href="/main.svg#arrow-back-svg"></use>
         </svg>
         <span>Назад</span>
     </div>
+
     <div class="sub-catalog">
         <h3>Покупателям</h3>
         <a href="/contacts"><span>Контакты</span></a>
         <a href="/about"><span>О нас</span></a>
         <a href="/feedback"><span>Отзывы</span></a>
     </div>
+    <!-- first catalog layer with only headlines-->
+    <div class="sub-catalog">
+        <a href="/fullcatalog">
+            <h3>Каталог</h3>
+        </a>
+
+        <div class="menu-item" onclick="scrollPageRight(this)">
+            <a href=""><span>Категория 1</span></a>
+            <svg class="more-catalog-svg">
+                <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+            </svg>
+        </div>
+
+        <div class="menu-item" onclick="scrollPageRight(this)">
+            <a href=""><span>Категория 2</span></a>
+            <svg class="more-catalog-svg">
+                <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+            </svg>
+        </div>
+
+        <a href=""><span>Категория 3</span></a>
+    </div>
 
 
-
-
+    <!--
     <div class="menu-item" onclick="scrollPageRight(this)">
-        <span>Каталог2</span>
+        <span>Категория ...</span>
         <svg class="more-catalog-svg">
             <use xlink:href="/main.svg#arrow-catalog-svg"></use>
         </svg>
-    </div>
+    </div> -->
 </div>
 
 
@@ -32,18 +55,66 @@
 
 
 
-<div class="therd-layer page">        
+<div class="therd-layer page">
+
     <div class="back-btn-menu" onclick="scrollPageLeft(this)">
         <svg class="arrow-back-svg-icon">
             <use xlink:href="/main.svg#arrow-back-svg"></use>
         </svg>
         <span>Назад</span>
     </div>
-    <h3></h3>
-    <div class="menu-item" onclick="scrollPageRight(this)">
-        <span>Каталог2</span>
-        <svg class="more-catalog-svg">
-            <use xlink:href="/main.svg#arrow-catalog-svg"></use>
-        </svg>
+
+    <!-- Second catalog layer with choosen category of layer 1-->
+
+    <div class="sub-catalog">
+        <h3>Категория 1</h3>
+        <a href=""><span>товар 1</span></a>
+        <a href=""><span>товар 2</span></a>
+        <a href=""><span>товар 3</span></a>
     </div>
+
+    <div class="sub-catalog">
+        <h3>Категория 2</h3>
+        <div class="menu-item" onclick="scrollPageRight(this)">
+            <a href=""><span>Подкатегория 1</span></a>
+            <svg class="more-catalog-svg">
+                <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+            </svg>
+        </div>
+        <div class="menu-item" onclick="scrollPageRight(this)">
+            <a href=""><span>Подкатегория 2</span></a>
+            <svg class="more-catalog-svg">
+                <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+            </svg>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="therd-layer page">
+
+    <div class="back-btn-menu" onclick="scrollPageLeft(this)">
+        <svg class="arrow-back-svg-icon">
+            <use xlink:href="/main.svg#arrow-back-svg"></use>
+        </svg>
+        <span>Назад</span>
+    </div>
+
+    <!-- therd catalog layer with choosen category of layer 2-->
+
+    <div class="sub-catalog">
+        <h3>Подкатегория 1</h3>
+        <a href=""><span>товар 1</span></a>
+        <a href=""><span>товар 2</span></a>
+        <a href=""><span>товар 3</span></a>
+    </div>
+
+    <div class="sub-catalog">
+        <h3>Подкатегория 2</h3>
+        <a href=""><span>товар 4</span></a>
+        <a href=""><span>товар 5</span></a>
+        <a href=""><span>товар 6</span></a>
+    </div>
+
 </div>
