--- a/views/footer-template.ejs
+++ b/views/footer-template.ejs
@@ -48,10 +48,10 @@
             </div>
             <div class="drop-down-menu-footer">
                 <div>
-                    <a href="">О нас</a>
+                    <a href="/about">О нас</a>
                 </div>
                 <div>
-                    <a href="">Контакты</a>
+                    <a href="/contacts">Контакты</a>
                 </div>
                 <div>
                     <a href="">Часто задаваемые вопросы</a>
